Relative paths for test file

--- a/design-patterns.html
+++ b/design-patterns.html
@@ -18,19 +18,15 @@
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic">
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="http://www.domain.com/style/foundation.min.css">
-	<link rel="stylesheet" href="http://www.domain.com/style/site.css">
+	<link rel="stylesheet" href="style/foundation.min.css">
+	<link rel="stylesheet" href="style/site.css">
 
 	<!-- JS -->
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
 
-	<!-- Feeds -->
-	<link rel="alternate" type="application/atom+xml" title="Atom feed" href="http://www.domain.com/atom/" />
-	<link rel="alternate" type="application/rss+xml" title="RSS feed" href="http://www.domain.com/rss/" />
-
 	<!-- Media Queries support for IE < 9 -->
 	<!--[if lt IE 9]>
-		<script src="http://www.domain.com/js/css3-mediaqueries.js"></script>
+		<script src="js/css3-mediaqueries.js"></script>
 	<![endif]-->
 
 	<!-- Canonical -->
@@ -228,7 +224,7 @@
 	</div><!-- end primary -->
 
 
-	<div id="footer">
+	<footer>
 		<div class="row">
 			<div class="six columns centered">
 				<div id="about">
@@ -242,13 +238,13 @@
 				</div><!-- end about -->
 			</div><!-- end six columns -->
 		</div><!-- end row -->
-	</div><!-- end footer -->
+	</footer>
 
 
 	<!-- JS -->
-	<script src="http://www.domain.com/js/jquery.js"></script>
-	<script src="http://www.domain.com/js/foundation.min.js"></script>
-	<script src="http://www.domain.com/js/app.js"></script>
+	<script src="js/jquery.js"></script>
+	<script src="js/foundation.min.js"></script>
+	<script src="js/app.js"></script>
 
 </body>
 </html>
