--- a/design-patterns.html
+++ b/design-patterns.html
@@ -36,7 +36,7 @@
 <body id="home">
 
 
-	<div id="masthead">
+	<header>
 		<div class="row">
 			<div class="six columns centered">
 				<div id="pagetop">
@@ -44,7 +44,7 @@
 				</div>
 			</div><!-- end six columns -->
 		</div><!-- end row -->
-	</div><!-- end masthead -->
+	</header>
 
 
 	<div id="primary">
