Remove an unnecessary div from header/footer

--- a/design-patterns.html
+++ b/design-patterns.html
@@ -36,14 +36,12 @@
 <body id="home">
 
 
-	<header>
-		<div class="row">
-			<div class="six columns centered">
-				<div id="pagetop">
-					<h1><a href="http://www.domain.com/" rel="home">My site</a></h1>
-				</div>
-			</div><!-- end six columns -->
-		</div><!-- end row -->
+	<header class="row">
+		<div class="six columns centered">
+			<div id="pagetop">
+				<h1><a href="http://www.domain.com/" rel="home">My site</a></h1>
+			</div>
+		</div><!-- end six columns -->
 	</header>
 
 
@@ -224,20 +222,18 @@
 	</div><!-- end primary -->
 
 
-	<footer>
-		<div class="row">
-			<div class="six columns centered">
-				<div id="about">
-					<ul class="social">
-						<li><a href="#">Twitter</a></li>
-						<li><a href="#">Flickr</a></li>
-						<li><a href="#">Vimeo</a></li>
-						<li><a href="#">Facebook</a></li>
-						<li><a href="#">Google+</a></li>
-					</ul>
-				</div><!-- end about -->
-			</div><!-- end six columns -->
-		</div><!-- end row -->
+	<footer class="row">
+		<div class="six columns centered">
+			<div id="about">
+				<ul class="social">
+					<li><a href="#">Twitter</a></li>
+					<li><a href="#">Flickr</a></li>
+					<li><a href="#">Vimeo</a></li>
+					<li><a href="#">Facebook</a></li>
+					<li><a href="#">Google+</a></li>
+				</ul>
+			</div><!-- end about -->
+		</div><!-- end six columns -->
 	</footer>
 
 
