Add aria roles to header/footer

--- a/design-patterns.html
+++ b/design-patterns.html
@@ -36,7 +36,7 @@
 <body id="home">
 
 
-	<header class="row">
+	<header role="banner" class="row">
 		<div class="six columns centered">
 			<div id="pagetop">
 				<h1><a href="http://www.domain.com/" rel="home">My site</a></h1>
@@ -222,7 +222,7 @@
 	</div><!-- end primary -->
 
 
-	<footer class="row">
+	<footer role="contentinfo" class="row">
 		<div class="six columns centered">
 			<div id="about">
 				<ul class="social">
